minor scss correction to feed page actions on mobile

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,5 +1,5 @@
 .card {
-  min-width: 280px;
+  min-width: 240px;
   border-radius: 10px !important;
   padding-right: 0 !important;
   padding-left: 0 !important;
